--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -26,7 +26,14 @@
         <mysql-connector.version>6.0.6</mysql-connector.version>
         <spring-data-jpa.version>2.0.0.RELEASE</spring-data-jpa.version>
 
+
         <fastjson-version>1.2.38</fastjson-version>
+        <junit-version>4.12</junit-version>
+        <log4j2-version>2.8.2</log4j2-version>
+        <ehcache-core-version>2.6.11</ehcache-core-version>
+        <druid-version>1.1.3</druid-version>
+        <gson-version>2.8.2</gson-version>
+        <apache-httpclient-version>4.5.3</apache-httpclient-version>
 
 
         <!-- 字符编码设置-->
