--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -26,15 +26,24 @@
         <mysql-connector.version>6.0.6</mysql-connector.version>
         <spring-data-jpa.version>2.0.0.RELEASE</spring-data-jpa.version>
 
-
         <fastjson-version>1.2.38</fastjson-version>
-        <junit-version>4.12</junit-version>
-        <log4j2-version>2.8.2</log4j2-version>
-        <ehcache-core-version>2.6.11</ehcache-core-version>
-        <druid-version>1.1.3</druid-version>
         <gson-version>2.8.2</gson-version>
-        <apache-httpclient-version>4.5.3</apache-httpclient-version>
+        <junit-version>4.12</junit-version>
+        <spring.log4j2-version>2.0.0.RELEASE</spring.log4j2-version>
 
+        <apache-httpclient-version>4.5.5</apache-httpclient-version>
+        <druid-version>1.1.6</druid-version>
+        <jedis-version>2.9.0</jedis-version>
+
+        <commons-logging-version>1.2</commons-logging-version>
+        <commons-lang3-version>3.6</commons-lang3-version>
+        <commons-codec-version>1.10</commons-codec-version>
+        <commons-io-version>2.5</commons-io-version>
+        <commons-fileupload-version>1.3.3</commons-fileupload-version>
+        <commons-pool2-version>2.4.2</commons-pool2-version>
+        <commons-beanutils-version>1.9.3</commons-beanutils-version>
+        <commons-math3-version>3.6.1</commons-math3-version>
+        <commons-cli-version>1.4</commons-cli-version>
 
         <!-- 字符编码设置-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -146,18 +155,55 @@
             <version>${javaee-api-version}</version>
         </dependency>
 
-        <!--  -->
+        <!-- fastjson -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${spring-data-jpa.version}</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson-version}</version>
         </dependency>
 
-        <!--  -->
+        <!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson-version}</version>
+        </dependency>
+
+        <!--  junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- log4j2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${spring-data-jpa.version}</version>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>${spring.log4j2-version}</version>
+        </dependency>
+
+
+        <!--  apache-httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache-httpclient-version}</version>
+        </dependency>
+
+        <!--  druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid-version}</version>
+        </dependency>
+
+        <!-- jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis-version}</version>
         </dependency>
 
 
