--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -18,32 +18,33 @@
     <properties>
 
         <java.version>1.8</java.version>
-        <javaee-servlet-api.version>4.0</javaee-servlet-api.version>
-        <javaee-api-version>8.0</javaee-api-version>
-        <spring-version>5.0.3.RELEASE</spring-version>
-        <spring-security-version>5.0.3.RELEASE</spring-security-version>
-        <spring-boot-version>2.0.0.RELEASE</spring-boot-version>
+        <servlet-api.version>4.0.0</servlet-api.version>
+        <javaee-api.version>8.0</javaee-api.version>
+        <spring.version>5.0.3.RELEASE</spring.version>
+        <spring-security.version>2.0.0.RELEASE</spring-security.version>
+        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
         <mysql-connector.version>6.0.6</mysql-connector.version>
         <spring-data-jpa.version>2.0.0.RELEASE</spring-data-jpa.version>
 
-        <fastjson-version>1.2.38</fastjson-version>
-        <gson-version>2.8.2</gson-version>
-        <junit-version>4.12</junit-version>
-        <spring.log4j2-version>2.0.0.RELEASE</spring.log4j2-version>
+        <fastjson.version>1.2.38</fastjson.version>
+        <gson.version>2.8.2</gson.version>
+        <junit.version>4.12</junit.version>
+        <spring-log4j2.version>2.0.0.RELEASE</spring-log4j2.version>
 
-        <apache-httpclient-version>4.5.5</apache-httpclient-version>
-        <druid-version>1.1.6</druid-version>
-        <jedis-version>2.9.0</jedis-version>
+        <apache-httpclient.version>4.5.5</apache-httpclient.version>
+        <druid.version>1.1.6</druid.version>
+        <jedis.version>2.9.0</jedis.version>
+        <springui.version>2.8.0</springui.version>
 
-        <commons-logging-version>1.2</commons-logging-version>
-        <commons-lang3-version>3.6</commons-lang3-version>
-        <commons-codec-version>1.10</commons-codec-version>
-        <commons-io-version>2.5</commons-io-version>
-        <commons-fileupload-version>1.3.3</commons-fileupload-version>
-        <commons-pool2-version>2.4.2</commons-pool2-version>
-        <commons-beanutils-version>1.9.3</commons-beanutils-version>
-        <commons-math3-version>3.6.1</commons-math3-version>
-        <commons-cli-version>1.4</commons-cli-version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <commons-lang3.version>3.6</commons-lang3.version>
+        <commons-codec.version>1.10</commons-codec.version>
+        <commons-io.version>2.5</commons-io.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+        <commons-pool2.version>2.4.2</commons-pool2.version>
+        <commons-beanutils.version>1.9.3</commons-beanutils.version>
+        <commons-math3.version>3.6.1</commons-math3.version>
+        <commons-cli.version>1.4</commons-cli.version>
 
         <!-- 字符编码设置-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,61 +71,62 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
-            <version>${spring-version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <!-- spring security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>${spring-security-version}</version>
+            <version>${spring-security.version}</version>
         </dependency>
 
         <!-- mysql驱动:com.mysql.jdbc.Driver -->
@@ -145,35 +147,35 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${javaee-servlet-api.version}</version>
+            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>${javaee-api-version}</version>
+            <version>${javaee-api.version}</version>
         </dependency>
 
         <!-- fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fastjson-version}</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <!-- gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson-version}</version>
+            <version>${gson.version}</version>
         </dependency>
 
         <!--  junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -181,29 +183,41 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>${spring.log4j2-version}</version>
+            <version>${spring-log4j2.version}</version>
         </dependency>
-
 
         <!--  apache-httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${apache-httpclient-version}</version>
+            <version>${apache-httpclient.version}</version>
         </dependency>
 
         <!--  druid -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${druid-version}</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- jedis -->
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>${jedis-version}</version>
+            <version>${jedis.version}</version>
+        </dependency>
+
+        <!-- swagger2 ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springui.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springui.version}</version>
         </dependency>
 
 
