--- a/rls-base-common/pom.xml
+++ b/rls-base-common/pom.xml
@@ -3,6 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.rls.base</groupId>
+		<artifactId>rls-base</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../rls-base/pom.xml</relativePath>
+	</parent>
+
 	<groupId>com.rls</groupId>
 	<artifactId>rls-base-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -10,7 +17,6 @@
 
 	<name>rls-base-common</name>
 	<description>rls-base-common</description>
-
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
