--- a/rls-base/pom.xml
+++ b/rls-base/pom.xml
@@ -1,17 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.rls</groupId>
-  <artifactId>rls-base</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <parent>
+        <groupId>com.rls</groupId>
+        <artifactId>rls-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../rls-parent/pom.xml</relativePath>
+    </parent>
 
-  <!-- 子模块 -->
-  <modules>
-    <module>../rls-base-common</module>
-    <module>../rls-base-util</module>
-  </modules>
+    <groupId>com.rls</groupId>
+    <artifactId>rls-base</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <!-- 子模块 -->
+    <modules>
+        <module>../rls-base-common</module>
+        <module>../rls-base-util</module>
+    </modules>
 
 
 </project>
