--- a/rls-sys-common-service/pom.xml
+++ b/rls-sys-common-service/pom.xml
@@ -3,6 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<artifactId>rls-sys</artifactId>
+		<groupId>com.rls</groupId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../rls-sys/pom.xml</relativePath>
+	</parent>
+
 	<groupId>com.rls</groupId>
 	<artifactId>rls-sys-common-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -11,30 +18,8 @@
 	<name>rls-sys-common-service</name>
 	<description>rls-sys-common-service</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -45,6 +30,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
