--- a/rls-sys-common-dto/pom.xml
+++ b/rls-sys-common-dto/pom.xml
@@ -11,4 +11,8 @@
     <artifactId>rls-sys-common-dto</artifactId>
     <packaging>pom</packaging>
 
+    <dependencies>
+
+    </dependencies>
+
 </project>
