--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -7,10 +7,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <!-- 子模块 -->
+    <!-- 子模块  <module>../rls-sys</module>-->
     <modules>
-        <module>../rls-sys</module>
         <module>../rls-base</module>
+        <module>../rls-sys</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
@@ -58,11 +58,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
 
