--- a/rls-sys-common-dto/pom.xml
+++ b/rls-sys-common-dto/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>rls-sys</artifactId>
-        <groupId>com.rls</groupId>
+        <groupId>com.rls.sys</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../rls-sys/pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rls-sys-common-dto</artifactId>
     <packaging>pom</packaging>
