--- a/rls-sys-common-service/pom.xml
+++ b/rls-sys-common-service/pom.xml
@@ -5,14 +5,13 @@
 
 	<parent>
 		<artifactId>rls-sys</artifactId>
-		<groupId>com.rls</groupId>
+		<groupId>com.rls.sys</groupId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../rls-sys/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.rls</groupId>
 	<artifactId>rls-sys-common-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>rls-sys-common-service</name>
