--- a/rls-sys/pom.xml
+++ b/rls-sys/pom.xml
@@ -1,5 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>rls-parent</artifactId>
         <groupId>com.rls</groupId>
@@ -7,9 +9,9 @@
         <relativePath>../rls-parent/pom.xml</relativePath>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.rls.sys</groupId>
     <artifactId>rls-sys</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -21,13 +23,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.rls</groupId>
+            <groupId>com.rls.base</groupId>
             <artifactId>rls-base-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.rls</groupId>
+            <groupId>com.rls.base</groupId>
             <artifactId>rls-base-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
