--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -28,7 +28,6 @@
         <fastjson.version>1.2.38</fastjson.version>
         <gson.version>2.8.2</gson.version>
         <junit.version>4.12</junit.version>
-        <spring-log4j2.version>2.0.0.RELEASE</spring-log4j2.version>
 
         <apache-httpclient.version>4.5.5</apache-httpclient.version>
         <druid.version>1.1.6</druid.version>
@@ -180,13 +179,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- log4j2 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>${spring-log4j2.version}</version>
-        </dependency>
-
         <!--  apache-httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -219,6 +211,35 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${springui.version}</version>
+        </dependency>
+
+        <!-- spring5  不兼容低版本jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.4</version>
         </dependency>
 
 
