--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -33,6 +33,8 @@
         <druid.version>1.1.6</druid.version>
         <jedis.version>2.9.0</jedis.version>
         <springui.version>2.8.0</springui.version>
+        <jackson.version>2.7.5</jackson.version>
+        <org.jackson.version>1.9.4</org.jackson.version>
 
         <commons-logging.version>1.2</commons-logging.version>
         <commons-lang3.version>3.6</commons-lang3.version>
@@ -213,33 +215,33 @@
             <version>${springui.version}</version>
         </dependency>
 
-        <!-- spring5  不兼容低版本jackson-->
+        <!-- spring5  不兼容低版本jackson 2.7一下版本-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.7.5</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.7.5</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.7.5</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.4</version>
+            <version>${org.jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.4</version>
+            <version>${org.jackson.version}</version>
         </dependency>
 
 
