--- a/rls-sys-common-service/src/main/resources/application.yml
+++ b/rls-sys-common-service/src/main/resources/application.yml
@@ -1,15 +1,16 @@
-server:
-  port: 80
-  session:
-   timeout:1800
-spring:
-  profiles:
-       active: dev
-  application:
-    name: rls-sys-common-service
-tomcat:
+ #ºËÐÄÅäÖÃÎÄ¼þ
+ server:
+    port: 80
+ spring:
+    profiles:
+        active: dev
+    application:
+      name: rls-sys-service
+ tomcat:
       uri-encoding: UTF-8
       max-threads: 800
       max-connections: 800
       context-path: /sys
-
+  jackson:
+    date-format:  yyyy-MM-dd HH:mm:ss
+    time-zone:  UTC
