--- a/rls-sys-common-service/pom.xml
+++ b/rls-sys-common-service/pom.xml
@@ -19,6 +19,28 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.rls.sys</groupId>
+			<artifactId>rls-sys-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.0.4.RELEASE</version>
+		</dependency>
+
+		<!-- 热部署插件-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>1.5.9.RELEASE</version>
+			<!-- optional=true,依赖不会传递，该项目依赖devtools；之后依赖myboot项目的项目如果想要使用devtools，需要重新引入 -->
+			<optional>true</optional>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
