--- a/rls-sys-common-service/src/main/resources/application.dev.yml
+++ b/rls-sys-common-service/src/main/resources/application.dev.yml
@@ -1,14 +1,12 @@
-# 测试
-spring:
-    profiles: dev
-    application:
-    name: rls-sys-service
-    datasource:
-         driver-class-name: com.mysql.jdbc.Driver
-         url: jdbc:mysql://localhost:3306/rls
-         username: root
-         password: zl521131
-    jpa:
-        hibernate:
-             ddl.auto: create-drop  #其主要作用是：自动创建、更新、验证数据库表结构。create update validate create-drop
-        show-sql: true
+
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/rls?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=UTF-8&useSSL=true&autoReconnect=true&zeroDateTimeBehavior=convertToNull # JDBC url of the database.
+    username: root
+    password: zl521131
+  jpa:
+    database: mysql
+    hibernate:
+      ddl.auto: create
+    show-sql: true
