--- a/rls-sys-common-service/src/main/resources/application.pord.yml
+++ b/rls-sys-common-service/src/main/resources/application.pord.yml
@@ -1,14 +1,51 @@
-# 生产
+# 服务
+server :
+  port : 80
+# spring
 spring:
-    profiles: dev
-    application:
-    name: hww-sys-web-admin
-    datasource:
-         driver-class-name: com.mysql.jdbc.Driver
-         url: jdbc:mysql://localhost:3306/rls
-         username: root
-         password: zl521131
-    jpa:
-        hibernate:
-             ddl.auto: create-drop  #其主要作用是：自动创建、更新、验证数据库表结构。create update validate create-drop
-        show-sql: true
+  profiles: pord
+  application:
+    name: rls-sys-common-service
+  resources:
+    cache-period: 10000
+  #数据源
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/rls?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=UTF-8&useSSL=true&autoReconnect=true&zeroDateTimeBehavior=convertToNull # JDBC url of the database.
+    username: root
+    password: zl521131
+    druid:
+          initial-size: 5
+          max-active: 20
+          min-idle: 1
+          max-wait: 60000
+          pool-prepared-statements: false
+          max-pool-prepared-statement-per-connection-size: 20
+          test-on-borrow: false
+          test-on-return: false
+          test-while-idle: true
+          min-evictable-idle-time-millis: 60000
+          max-evictable-idle-time-millis: 300000
+          filter:
+             # 配置StatFilter
+            stat:
+              db-type: h2
+              log-slow-sql: true
+              slow-sql-millis: 2000
+             # 配置WallFilter
+            wall:
+              enabled: false
+              db-type: h2
+              delete-allow: false
+              drop-table-allow: false
+  jpa:
+    database: mysql
+    hibernate:
+      ddl.auto: create
+    show-sql: true
+
+logging:
+  file: logs/rls-sys--service.log
+  level:
+    com.rls.sys: debug
