--- a/rls-sys-common-service/src/main/resources/application.yml
+++ b/rls-sys-common-service/src/main/resources/application.yml
@@ -1,16 +1,34 @@
- #ºËĞÄÅäÖÃÎÄ¼ş
- server:
-    port: 80
- spring:
-    profiles:
-        active: dev
-    application:
-      name: rls-sys-service
- tomcat:
-      uri-encoding: UTF-8
-      max-threads: 800
-      max-connections: 800
-      context-path: /sys
-  jackson:
-    date-format:  yyyy-MM-dd HH:mm:ss
-    time-zone:  UTC
+#  æœåŠ¡é…ç½®
+server :
+  port : 80
+
+# springé…ç½®
+spring:
+  profiles:
+    active: dev
+  application:
+    name: rls-sys-common-service
+  resources:
+    cache-period: 10000
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/rls?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=UTF-8&useSSL=true&autoReconnect=true&zeroDateTimeBehavior=convertToNull # JDBC url of the database.
+    username: root
+    password: zl521131
+  jpa:
+    database: mysql
+    hibernate:
+      ddl.auto: create
+    show-sql: true
+
+#  æ—¥å¿—é…ç½®
+logging:
+  file: logs/rls-sys--service.log
+  level:
+    com.rls.sys: debug
+
+
+
+
+
