--- a/rls-sys-common-service/pom.xml
+++ b/rls-sys-common-service/pom.xml
@@ -26,6 +26,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.rls.sys</groupId>
+			<artifactId>rls-sys-common-dto</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>5.0.4.RELEASE</version>
