--- a/rls-sys-common-service/src/main/resources/application.yml
+++ b/rls-sys-common-service/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     name: rls-sys-common-service
   resources:
     cache-period: 10000
+ # 数据源配置
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,7 +20,7 @@ spring:
   jpa:
     database: mysql
     hibernate:
-      ddl.auto: create
+      ddl.auto: create  #创建表方式
     show-sql: true
 
 #  日志配置
