权限设计简化

--- a/rls-sys-common-dto/pom.xml
+++ b/rls-sys-common-dto/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>rls-sys-common-dto</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
 
