--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -31,9 +31,8 @@
         <apache-httpclient.version>4.5.5</apache-httpclient.version>
         <druid.version>1.1.6</druid.version>
         <jedis.version>2.9.0</jedis.version>
-        <springui.version>2.8.0</springui.version>
-        <jackson.version>2.9.5</jackson.version>
-        <org.jackson.version>1.9.4</org.jackson.version>
+        <springui.version>2.7.0</springui.version>
+        <jackson.version>2.9.1</jackson.version>
 
         <commons.lang3.version>3.6</commons.lang3.version>
         <commons.codec.version>1.10</commons.codec.version>
@@ -108,12 +107,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>${javaee-api.version}</version>
-        </dependency>
-
         <!-- fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -182,19 +175,6 @@
             <version>${jackson.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>${org.jackson.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>${org.jackson.version}</version>
-        </dependency>
-
-
        <!--commons 工具包-->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -252,7 +232,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.9.release</version>
+                <version>${spring-boot.version}</version>
                 <dependencies>    <!-- 修改代码后自动生效，Reload Java classes without restarting the container -->
                     <dependency>
                         <groupId>org.springframework</groupId>
